<resources>
    <string name="app_name">GuideRentTest</string>

    <string name="title_location">Location</string>
    <string name="title_top">Top</string>
    <string name="title_route">Route</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_guide_profile">GuideProfileActivity</string>
    <string name="interests_title">Interests</string>
    <string name="GuideName_title">Ann</string>
    <string name="service_title">Service</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDd2M4oPTPOVDzh594aejodatGuebhjFEE</string>
    <string name="facebook_app_id">351730035585242</string>
    <string name="fb_login_protocol_scheme">fb351730035585242</string>
    <string name="server_client_id">821606449100-oppsb4spjjjnontmbcro5qobpvb098ci.apps.googleusercontent.com</string>
    <string name="google_secret">GsMemjEkKSwmG0JeeQJkjfNr</string>


    <string name="title">Заголовок</string>
    <string name="value_star">5.6</string>
    <string name="value_clock">3:30</string>
    <string name="quantity_people">155</string>
    <string name="quantity_photo">Количество фото</string>
    <string name="visitors">Посещения</string>
    <string name="title_2">Парк Шевченка</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Address">Адрес</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="set_location_name">Введите название новой локации</string>
    <string name="location_name_hint">Название локации</string>
    <string name="create">Создать</string>
</resources>
