<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="10dp"
    app:elevation="4dp" >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ua.com.up_site.guiderenttest.CustomImageView
            android:id="@+id/imgMain"
            android:layout_width="83dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/opera_theater" />

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/valueStar"
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="44dp"
            android:text="@string/value_star"
            app:layout_constraintStart_toEndOf="@+id/imgMain"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="78dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/people"/>

        <ImageView
            android:id="@+id/imgClock"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="79dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/valueClock"
            android:layout_width="28dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/value_clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantityPeople"
            android:layout_width="25dp"
            android:layout_height="18dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="51dp"
            android:text="@string/quantity_people"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantityPhoto"
            android:layout_width="70dp"
            android:layout_height="13dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:text="@string/quantity_photo"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/visitors"
            android:layout_width="48dp"
            android:layout_height="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="48dp"
            android:text="@string/visitors"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="28dp"
            android:text="@string/title_2"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>